started huge refactoring of DSL

--- a/de.guite.modulestudio.help.nl1.de/nl/de/html/Components.html
+++ b/de.guite.modulestudio.help.nl1.de/nl/de/html/Components.html
@@ -14,14 +14,12 @@
 <h2>Einführung</h2>
 <p>ModuleStudio separiert Web-Anwendungen in technische Schichten:</p>
 <dl>
-<dt>Persistenz</dt>
-<dd>Datenschicht zur Definition der Datenbank-Strukturen.</dd>
-<dt>Prozesse</dt>
+<dt>Models</dt>
+<dd>Datenschicht zur Definition der Datenbank-Strukturen und Behaviour.</dd>
+<dt>Controller</dt>
 <dd>Prozessschicht zur Definition von Anwendungsfällen und Benutzerinteraktion.</dd>
-<dt>Präsentation</dt>
+<dt>Views</dt>
 <dd>Darstellungsschicht zur Spezifikation kosmetischer Aspekte.</dd>
-<dt>Verhalten</dt>
-<dd>Verhaltensschicht zur Anreicherung der Persistenzelemente mit Domänenlogik.</dd>
 </dl>
 
 <h2>DSL</h2>
