--- a/de.guite.modulestudio.help.nl1.de/nl/de/html/Editors.html
+++ b/de.guite.modulestudio.help.nl1.de/nl/de/html/Editors.html
@@ -15,13 +15,11 @@
 
 <h2>Haupt-Editor</h2>
 
-<h2>Persistenz-Editor</h2>
+<h2>Model-Editor</h2>
 
-<h2>Prozess-Editor</h2>
+<h2>Controller-Editor</h2>
 
-<h2>Präsentations-Editor</h2>
-
-<h2>Verhaltens-Editor</h2>
+<h2>View-Editor</h2>
 
 <h2>Zusätzliche Anmerkungen</h2>
 
