--- a/de.guite.modulestudio.help.nl1.de/nl/de/html/Metamodel.html
+++ b/de.guite.modulestudio.help.nl1.de/nl/de/html/Metamodel.html
@@ -13,15 +13,11 @@
 
 <h2>Einführung</h2>
 
-<h2>Haupt-Modelle</h2>
+<h2>Model</h2>
 
-<h2>Persistenz-Modelle</h2>
+<h2>Controller</h2>
 
-<h2>Prozess-Modelle</h2>
-
-<h2>Präsentations-Modelle</h2>
-
-<h2>Verhaltens-Modelle</h2>
+<h2>View</h2>
 
 <h2>Zusätzliche Anmerkungen</h2>
 
