--- a/production/de.guite.modulestudio.help.nl1.de/nl/de/contents/custom/include_footer.html
+++ b/production/de.guite.modulestudio.help.nl1.de/nl/de/contents/custom/include_footer.html
@@ -16,7 +16,7 @@
             <h3>MOST</h3>
             <ul>
                 <li><a href="http://modulestudio.de" title="modulestudio.de" target="_blank">Homepage</a></li>
-                <li><a href="http://modulestudio.de/Forum/" title="modulestudio.de/Forum/" target="_blank">Support</a></li>
+                <li><a href="http://webgen.modulestudio.de" title="webgen.modulestudio.de" target="_blank">WebGen</a></li>
             </ul>
         </td>
         <td valign="top">
@@ -24,6 +24,7 @@
             <ul>
                 <li><a href="https://github.com/Guite/MostGenerator/issues" target="_blank">Generator</a></li>
                 <li><a href="https://github.com/Guite/MostHelp/issues" target="_blank">Dokumentation</a></li>
+                <li><a href="https://github.com/Guite/MostExamples/issues" target="_blank">Beispiele</a></li>
                 <li><a href="https://github.com/Guite/MostLocales/issues" target="_blank">Übersetzungen</a></li>
             </ul>
         </td>
