removed obsolete CE suffix

--- a/production/de.guite.modulestudio.locales.build/license.html
+++ b/production/de.guite.modulestudio.locales.build/license.html
@@ -53,7 +53,7 @@ installieren, wenn er sich auch mit diesen untenstehenden
 Lizenzvereinbarungen einverstanden erklärt. Welche der jeweiligen
 Lizenzen auf die einzelnen enthaltenen Komponenten dieser
 Drittanbieter zutreffen, ist innerhalb der Software unter Hauptmenü
-„Hilfe“ → About ModuleStudio CE → Installation Details →
+„Hilfe“ → About ModuleStudio → Installation Details →
 Eclipse Logo → License / Legal Info zu finden.</SPAN></FONT></FONT></FONT></STRONG></P>
 <P STYLE="margin-bottom: 0cm"><BR>
 </P>
@@ -308,7 +308,7 @@ considered. The licencee agrees to install the software only when he
 also accepts these licencing agreements mentioned below. The software
 contains information concerning the licences for the third-party
 components used in the software at m</SPAN></FONT></FONT></FONT></STRONG><STRONG><FONT COLOR="#000000"><FONT FACE="Courier New, monospace"><FONT SIZE=3><I><SPAN STYLE="font-weight: normal">ain
-menu Help → About ModuleStudio CE → Installation Details →
+menu Help → About ModuleStudio → Installation Details →
 Eclipse Logo → Licence / Legal Info</SPAN></I></FONT></FONT></FONT></STRONG><STRONG><FONT COLOR="#000000"><FONT FACE="Courier New, monospace"><FONT SIZE=3><SPAN STYLE="font-weight: normal">.</SPAN></FONT></FONT></FONT></STRONG></P>
 <P STYLE="margin-bottom: 0cm"><BR>
 </P>
