updated link to German Zikula wiki

--- a/production/de.guite.modulestudio.help.nl1.de/nl/de/contents/custom/include_footer.html
+++ b/production/de.guite.modulestudio.help.nl1.de/nl/de/contents/custom/include_footer.html
@@ -32,7 +32,7 @@
             <h3>Zikula</h3>
             <ul>
                 <li><a href="http://zikula.de" title="zikula.de" target="_blank">Homepage</a></li>
-                <li><a href="http://wiki.zikula.de" title="wiki.zikula.de" target="_blank">Wiki</a></li>
+                <li><a href="https://github.com/zikula-communities/german/wiki" title="Deutschsprachige Dokumentation" target="_blank">Wiki</a></li>
                 <li><a href="http://support.zikula.de" title="support.zikula.de" target="_blank">Support</a></li>
             </ul>
         </td>
