added Breeze credits

--- a/production/de.guite.modulestudio.locales.build/license.html
+++ b/production/de.guite.modulestudio.locales.build/license.html
@@ -248,6 +248,23 @@ limitations under the License. </SPAN></FONT></FONT></FONT></STRONG>
 </P>
 <P STYLE="margin-bottom: 0cm"><BR>
 </P>
+<P STYLE="margin-bottom: 0cm"><STRONG><FONT COLOR="#000000"><FONT FACE="Courier New, monospace"><FONT SIZE=3><SPAN STYLE="font-weight: normal">-------------------------------------------------</SPAN></FONT></FONT></FONT></STRONG></P>
+<P STYLE="margin-bottom: 0cm"><BR>
+</P>
+<P STYLE="margin-bottom: 0cm"><BR>
+</P>
+<P STYLE="margin-bottom: 0cm"><STRONG><FONT COLOR="#000000"><FONT FACE="Courier New, monospace"><FONT SIZE=3><U><SPAN STYLE="font-weight: normal">Breeze Icon Theme</SPAN></U></FONT></FONT></FONT></STRONG></P>
+<P STYLE="margin-bottom: 0cm"><BR>
+</P>
+<P STYLE="margin-bottom: 0cm"><STRONG><FONT COLOR="#000000"><FONT FACE="Courier New, monospace"><FONT SIZE=3><SPAN STYLE="font-weight: normal">ModuleStudio uses the Breeze icon theme which is made available under the terms of the GNU Lesser Public License.</SPAN></FONT></FONT></FONT></STRONG></P>
+<P STYLE="margin-bottom: 0cm"><BR>
+</P>
+<P STYLE="margin-bottom: 0cm"><STRONG><FONT COLOR="#000000"><FONT FACE="Courier New, monospace"><FONT SIZE=3><SPAN STYLE="font-weight: normal">You may obtain a copy of the License at
+https://github.com/NitruxSA/breeze-icon-theme/blob/master/LICENSE</SPAN></FONT></FONT></FONT></STRONG></P>
+<P STYLE="margin-bottom: 0cm"><BR>
+</P>
+<P STYLE="margin-bottom: 0cm"><BR>
+</P>
 <P STYLE="margin-bottom: 0cm"><BR>
 </P>
 <P STYLE="margin-bottom: 0cm"><BR>
@@ -484,5 +501,22 @@ or implied. </SPAN></FONT></FONT></FONT></STRONG>
 the License for the specific language governing permissions and
 limitations under the License. </SPAN></FONT></FONT></FONT></STRONG>
 </P>
+<P STYLE="margin-bottom: 0cm"><BR>
+</P>
+<P STYLE="margin-bottom: 0cm"><BR>
+</P>
+<P STYLE="margin-bottom: 0cm"><STRONG><FONT COLOR="#000000"><FONT FACE="Courier New, monospace"><FONT SIZE=3><SPAN STYLE="font-weight: normal">-------------------------------------------------</SPAN></FONT></FONT></FONT></STRONG></P>
+<P STYLE="margin-bottom: 0cm"><BR>
+</P>
+<P STYLE="margin-bottom: 0cm"><BR>
+</P>
+<P STYLE="margin-bottom: 0cm"><STRONG><FONT COLOR="#000000"><FONT FACE="Courier New, monospace"><FONT SIZE=3><U><SPAN STYLE="font-weight: normal">Breeze Icon Theme</SPAN></U></FONT></FONT></FONT></STRONG></P>
+<P STYLE="margin-bottom: 0cm"><BR>
+</P>
+<P STYLE="margin-bottom: 0cm"><STRONG><FONT COLOR="#000000"><FONT FACE="Courier New, monospace"><FONT SIZE=3><SPAN STYLE="font-weight: normal">ModuleStudio uses the Breeze icon theme which is made available under the terms of the GNU Lesser Public License.</SPAN></FONT></FONT></FONT></STRONG></P>
+<P STYLE="margin-bottom: 0cm"><BR>
+</P>
+<P STYLE="margin-bottom: 0cm"><STRONG><FONT COLOR="#000000"><FONT FACE="Courier New, monospace"><FONT SIZE=3><SPAN STYLE="font-weight: normal">You may obtain a copy of the License at
+https://github.com/NitruxSA/breeze-icon-theme/blob/master/LICENSE</SPAN></FONT></FONT></FONT></STRONG></P>
 </BODY>
 </HTML>
