--- a/features/de.guite.modulestudio.locales.feature/license.html
+++ b/features/de.guite.modulestudio.locales.feature/license.html
@@ -28,7 +28,7 @@ jeweiligen Verwender der Software (nachfolgend „Lizenznehmer“
 genannt) geschlossen. Die Softwarelizenz bezieht sich auf die Version
 0.7.5 von ModuleStudio (nachfolgend „Software“
 genannt). Funktionsumfang und Informationen zur Benutzung der
-Software werden auf der Homepage (</SPAN></FONT></FONT></FONT></STRONG><STRONG><A HREF="http://modulestudio.de/"><FONT FACE="Courier New, monospace">http://modulestudio.de</FONT></A></STRONG><STRONG><FONT COLOR="#000000"><FONT FACE="Courier New, monospace"><FONT SIZE=3><SPAN STYLE="font-weight: normal">)
+Software werden auf der Homepage (</SPAN></FONT></FONT></FONT></STRONG><STRONG><A HREF="https://modulestudio.de/"><FONT FACE="Courier New, monospace">https://modulestudio.de</FONT></A></STRONG><STRONG><FONT COLOR="#000000"><FONT FACE="Courier New, monospace"><FONT SIZE=3><SPAN STYLE="font-weight: normal">)
 vorgestellt. </SPAN></FONT></FONT></FONT></STRONG>
 </P>
 <P STYLE="margin-bottom: 0cm"><BR>
@@ -81,7 +81,7 @@ können (Kfz-Produktion und Konstruktion, Systeme für den Einsatz in
 Flughäfen, Straßentechnik, Schienenfahrzeuge, Raumfahrt, Medizin-
 und Labortechnik, etc.) ist ausdrücklich verboten. Ein Einstellen
 der Module oder Teilen davon als Showcase oder einen Bericht im Forum
-auf der Homepage (</SPAN></FONT></FONT></FONT></STRONG><STRONG><A HREF="http://modulestudio.de/Forum/"><FONT FACE="Courier New, monospace">http://modulestudio.de/Forum/</FONT></A></STRONG><STRONG><FONT COLOR="#000000"><FONT FACE="Courier New, monospace"><FONT SIZE=3><SPAN STYLE="font-weight: normal">)
+auf der Homepage (</SPAN></FONT></FONT></FONT></STRONG><STRONG><A HREF="https://modulestudio.de/Forum/"><FONT FACE="Courier New, monospace">https://modulestudio.de/Forum/</FONT></A></STRONG><STRONG><FONT COLOR="#000000"><FONT FACE="Courier New, monospace"><FONT SIZE=3><SPAN STYLE="font-weight: normal">)
 ist sehr erwünscht.</SPAN></FONT></FONT></FONT></STRONG></P>
 <P STYLE="margin-bottom: 0cm"><STRONG><FONT COLOR="#000000"><FONT FACE="Courier New, monospace"><FONT SIZE=3><SPAN STYLE="font-weight: normal">(4)
 Der Lizenznehmer ist nicht berechtigt die Software ganz oder in
@@ -302,7 +302,7 @@ and the respective user of the software (hereinafter referred to as
 ModuleStudio (hereinafter referred to as the
 &quot;Software&quot;). A description of the functional scope and
 information concerning the use of the software is provided on the
-home page </SPAN></FONT></FONT></FONT></STRONG><STRONG><FONT COLOR="#000000"><FONT FACE="Courier New, monospace"><FONT SIZE=3><SPAN STYLE="font-weight: normal">(</SPAN></FONT></FONT></FONT></STRONG><STRONG><A HREF="http://modulestudio.de/"><FONT FACE="Courier New, monospace">http://modulestudio.de</FONT></A></STRONG><STRONG><FONT COLOR="#000000"><FONT FACE="Courier New, monospace"><FONT SIZE=3><SPAN STYLE="font-weight: normal">)</SPAN></FONT></FONT></FONT></STRONG><STRONG><FONT COLOR="#000000"><FONT FACE="Courier New, monospace"><FONT SIZE=3><SPAN STYLE="font-weight: normal">.
+home page </SPAN></FONT></FONT></FONT></STRONG><STRONG><FONT COLOR="#000000"><FONT FACE="Courier New, monospace"><FONT SIZE=3><SPAN STYLE="font-weight: normal">(</SPAN></FONT></FONT></FONT></STRONG><STRONG><A HREF="https://modulestudio.de/"><FONT FACE="Courier New, monospace">https://modulestudio.de</FONT></A></STRONG><STRONG><FONT COLOR="#000000"><FONT FACE="Courier New, monospace"><FONT SIZE=3><SPAN STYLE="font-weight: normal">)</SPAN></FONT></FONT></FONT></STRONG><STRONG><FONT COLOR="#000000"><FONT FACE="Courier New, monospace"><FONT SIZE=3><SPAN STYLE="font-weight: normal">.
 </SPAN></FONT></FONT></FONT></STRONG>
 </P>
 <P STYLE="margin-bottom: 0cm"><BR>
@@ -352,7 +352,7 @@ systems for use at airports, road technology, rail-based vehicles,
 space flight, medical and laboratory technology, etc.) is explicitly
 prohibited. The use of modules or parts thereof as showcases or
 reports in the forum on the product page</SPAN></FONT></FONT></FONT></STRONG> <STRONG><FONT COLOR="#000000"><FONT FACE="Courier New, monospace"><FONT SIZE=3><SPAN STYLE="font-weight: normal">
-(</SPAN></FONT></FONT></FONT></STRONG><STRONG><A HREF="http://modulestudio.de/en/Forum/"><FONT FACE="Courier New, monospace">http://modulestudio.de/en/Forum/</FONT></A></STRONG><STRONG><FONT COLOR="#000000"><FONT FACE="Courier New, monospace"><FONT SIZE=3><SPAN STYLE="font-weight: normal">)
+(</SPAN></FONT></FONT></FONT></STRONG><STRONG><A HREF="https://modulestudio.de/en/Forum/"><FONT FACE="Courier New, monospace">https://modulestudio.de/en/Forum/</FONT></A></STRONG><STRONG><FONT COLOR="#000000"><FONT FACE="Courier New, monospace"><FONT SIZE=3><SPAN STYLE="font-weight: normal">)
 </SPAN></FONT></FONT></FONT></STRONG><STRONG><FONT COLOR="#000000"><FONT FACE="Courier New, monospace"><FONT SIZE=3><SPAN STYLE="font-weight: normal">is
 very welcome.</SPAN></FONT></FONT></FONT></STRONG></P>
 <P STYLE="margin-bottom: 0cm"><STRONG><FONT COLOR="#000000"><FONT FACE="Courier New, monospace"><FONT SIZE=3><SPAN STYLE="font-weight: normal">(4)
