--- a/bundles/de.guite.modulestudio.help.nl1.de/nl/de/contents/custom/include_footer.html
+++ b/bundles/de.guite.modulestudio.help.nl1.de/nl/de/contents/custom/include_footer.html
@@ -15,7 +15,7 @@
         <td valign="top">
             <h3>MOST</h3>
             <ul>
-                <li><a href="http://modulestudio.de" title="modulestudio.de" target="_blank">Homepage</a></li>
+                <li><a href="https://modulestudio.de" title="modulestudio.de" target="_blank">Homepage</a></li>
             </ul>
         </td>
         <td valign="top">
