--- a/bundles/de.guite.modulestudio.help.nl1.de/nl/de/contents/custom/include_footer.html
+++ b/bundles/de.guite.modulestudio.help.nl1.de/nl/de/contents/custom/include_footer.html
@@ -30,9 +30,8 @@
         <td valign="top">
             <h3>Zikula</h3>
             <ul>
-                <li><a href="http://zikula.de" title="zikula.de" target="_blank">Homepage</a></li>
-                <li><a href="https://github.com/zikula-communities/german/wiki" title="Deutschsprachige Dokumentation" target="_blank">Wiki</a></li>
-                <li><a href="http://support.zikula.de" title="support.zikula.de" target="_blank">Support</a></li>
+                <li><a href="https://zikula.de/de" title="zikula.de" target="_blank">Homepage</a></li>
+                <li><a href="https://zikula.slack.com" title="zikula.slack.com" target="_blank">Support</a></li>
             </ul>
         </td>
     </tr>
