updated project url

--- a/bundles/de.guite.modulestudio.help.nl1.de/nl/de/contents/custom/include_footer.html
+++ b/bundles/de.guite.modulestudio.help.nl1.de/nl/de/contents/custom/include_footer.html
@@ -30,7 +30,7 @@
         <td valign="top">
             <h3>Zikula</h3>
             <ul>
-                <li><a href="https://zikula.de/de" title="zikula.de" target="_blank">Homepage</a></li>
+                <li><a href="https://ziku.la/de" title="ziku.la" target="_blank">Homepage</a></li>
                 <li><a href="https://zikula.slack.com" title="zikula.slack.com" target="_blank">Support</a></li>
             </ul>
         </td>
